Gif update again

--- a/site/guide/model-documentation/work-with-content-blocks.qmd
+++ b/site/guide/model-documentation/work-with-content-blocks.qmd
@@ -53,17 +53,16 @@ Use {{< var vm.product >}} to assist you with generating content via AI!^[[Gener
 
 {{< include /guide/model-documentation/_add-content-block.qmd >}}
 
-5. Click {{< fa square-plus >}} and then select one of the available options: 
+6. Click {{< fa square-plus >}} and then select one of the available options:
 
-   - **[new]{.smallcaps}**
-   - **[from library]{.smallcaps}**
-    
-    - **Text** — Adds a new section with a blank content block. After the new content block has been added, click {{< fa pencil >}} to edit the contents of the section like any other.
-    - **Test-Driven**[^5] — Adds a new section with test results. 
-    - **Metric Over Time**[^6] — Adds a new section with metric over time results.
-    - 
+   a. [new]{.smallcaps} —
+      - **Text Block** — Adds a new section with a blank content block.
+   b. [from library]{.smallcaps} —
+      - **Text Block** — Inserts a text block from a template in your block library.[^5] Select reusable blocks you want to add, then click **Insert # Text Block(s) to Document**.
+      - **Test-Driven**[^6] — Adds a new section with logged test results.
+      - **Metric Over Time**[^7] — Adds a new section with logged metric over time results.
 
-6. After adding the block to your documentation, click on the text to make changes or add comments.[^7]
+7. After adding the block to your documentation, click on the text to make changes or add comments.[^8]
 
 ### Add mathematical formulas
 
@@ -88,7 +87,7 @@ While editing a simple text block, you can insert math equations using the formu
 ### Generate Text with AI <sup>[beta]{.smallcaps}</sup>
 
 ::: {.callout title="Have you logged your tests?"}
-Generating content drafts for your model documentation works best after you've logged tests and test descriptions for your model's tests with the {{< var validmind.developer >}},[^8] as existing test descriptions provide more context for the large language model (LLM) to draw upon.
+Generating content drafts for your model documentation works best after you've logged tests and test descriptions for your model's tests with the {{< var validmind.developer >}},[^9] as existing test descriptions provide more context for the large language model (LLM) to draw upon.
 
 :::
 
@@ -107,11 +106,11 @@ While editing a simple text block, you can have {{< var vm.product >}} assist yo
 4. After you insert the AI-generated draft, click on the text box to make the necessary edits and adjustments to your copy:
 
    - Ensure that content is in compliance with the quality guidelines outlined by your organization. 
-   - Use the content editing toolbar[^9] just as you would with any other text block.
+   - Use the content editing toolbar[^10] just as you would with any other text block.
 
 ![Generating content with AI within a simple text block](generate-with-ai.gif){width=90% fig-alt="An animation that showcases the Generate with AI feature within a simple text block" .screenshot}
 
-When generating content drafts with AI, accepted versions and edits are retained in your {{< fa wifi >}} Model Activity[^10] just like other updates to your documentation, reports, or plans. 
+When generating content drafts with AI, accepted versions and edits are retained in your {{< fa wifi >}} Model Activity[^11] just like other updates to your documentation, reports, or plans. 
 
 
 ## Remove content blocks
@@ -122,15 +121,15 @@ Test-driven or metric over time blocks can be re-added later on but **text block
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
-2. Select a model or find your model by applying a filter or searching for it.[^11]
+2. Select a model or find your model by applying a filter or searching for it.[^12]
 
 3. In the left sidebar that appears for your model, click **{{< fa book-open >}} Documentation**, **{{< fa shield >}} Validation Report**, or **{{< fa desktop >}} Ongoing Monitoring**.
 
-   You can now jump to any section of the model documentation or validation report by expanding the table of contents on the left and selecting the relevant section, such as **1.1 Model Overview**. 
+4. Click on a section header to expand that section and remove content.
 
-4. Select the block you wish to remove from the model documentation.
+5. Select the block you wish to remove from the model documentation.
 
-5. Click on {{< fa trash-can >}} located in either one of these locations:
+6. Click on {{< fa trash-can >}} located in either one of these locations:
 
    - In the toolbar for text blocks
    
@@ -141,7 +140,7 @@ Test-driven or metric over time blocks can be re-added later on but **text block
    ![Deleting a content block via the single-button toolbar for test-driven blocks](remove-test-driven-block.gif){fig-alt="A gif showing the process of deleting a content block via the single-button toolbar for test-driven blocks" .screenshot group="delete"}
 
 
-6. After you confirm, the content block is removed. 
+7. After you confirm, the content block is removed. 
 
 ## What's next
 
@@ -161,16 +160,18 @@ Test-driven or metric over time blocks can be re-added later on but **text block
 
 [^4]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
-[^5]: [Work with test results](/guide/model-documentation/work-with-test-results.qmd)
+[^5]: [Manage text block library](/guide/model-documentation/manage-text-block-library.qmd)
 
-[^6]: [Work with metrics over time](/guide/monitoring/work-with-metrics-over-time.qmd)
+[^6]: [Work with test results](/guide/model-documentation/work-with-test-results.qmd)
 
-[^7]: [Collaborate with others](/guide/model-documentation/collaborate-with-others.qmd)
+[^7]: [Work with metrics over time](/guide/monitoring/work-with-metrics-over-time.qmd)
 
-[^8]: [Run tests and test suites](/developer/model-testing/testing-overview.qmd)
+[^8]: [Collaborate with others](/guide/model-documentation/collaborate-with-others.qmd)
 
-[^9]: [Content editing toolbar](#content-editing-toolbar)
+[^9]: [Run tests and test suites](/developer/model-testing/testing-overview.qmd)
 
-[^10]: [View model activity](/guide/model-inventory/view-model-activity.qmd)
+[^10]: [Content editing toolbar](#content-editing-toolbar)
 
-[^11]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+[^11]: [View model activity](/guide/model-inventory/view-model-activity.qmd)
+
+[^12]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
