--- a/site/guide/monitoring/work-with-metrics-over-time.qmd
+++ b/site/guide/monitoring/work-with-metrics-over-time.qmd
@@ -38,17 +38,17 @@ Learn how to log metrics over time, set thresholds, and analyze model performanc
 
 3. In the left sidebar that appears for your model, click **{{< fa book-open >}} Documentation** or **{{< fa desktop >}} Ongoing Monitoring**.
 
-   You can now jump to any section of the model documentation or ongoing monitoring plan by expanding the table of contents on the left and selecting the relevant section you would like to add content to, such as **1.1 Model Monitoring Performance History**. 
+4. Click on a section header to expand that section and add content.
 
-4. Hover your mouse over the space where you want your new block to go until a horizontal dashed line with a {{< fa square-plus >}} sign appears that indicates you can insert a new block:
+5. Hover your mouse over the space where you want your new block to go until a horizontal dashed line with a {{< fa square-plus >}} sign appears that indicates you can insert a new block:
 
     ![Adding a content block in the UI](/guide/model-documentation/add-content-block.gif){fig-alt="A gif showing the process of adding a content block in the UI" .screenshot}
 
-5. Click {{< fa square-plus >}} and then select **Metric Over Time**.[^4]
+6. Click {{< fa square-plus >}} and then select **Metric Over Time**.[^4]
 
     By default, only the [{{< fa code >}} Developer]{.bubble} role can add metrics over time within model documentation or ongoing monitoring plans.
 
-6. Select metric over time results:
+7. Select metric over time results:
 
    - Select the metric over time to insert into the model documentation from the list of available metrics.
    - Search by name using **{{<fa magnifying-glass >}} Search** on the top-left to locate specific metrics.
@@ -57,9 +57,9 @@ Learn how to log metrics over time, set thresholds, and analyze model performanc
 
    To preview what is included in a metric, click on it. By default, the actively selected metric is previewed.
 
-7. Click **Insert # Metrics(s) Over Time to Document** when you are ready.
+8. Click **Insert # Metrics(s) Over Time to Document** when you are ready.
 
-8. After inserting the metrics into your document, review the data to confirm that it is accurate and relevant.
+9. After inserting the metrics into your document, review the data to confirm that it is accurate and relevant.
 
     ![Example F1 Score — Metric Over Time visualization](example-f1-score.png){fig-alt="A screenshot showing an example F1 Score — Metric Over Time visualization" .screenshot group="time-metric"}
 
