Updated selection menu text & img

--- a/site/guide/model-documentation/work-with-test-results.qmd
+++ b/site/guide/model-documentation/work-with-test-results.qmd
@@ -29,10 +29,10 @@ Once generated via the {{< var validmind.developer >}}, view and add the test re
 
 6. Select test results:
 
-   - Select the tests to insert into the model documentation from the list of available tests.
-   - Search by name using **{{<fa magnifying-glass >}} Search** on the top-left to locate specific test results.
+   - Choose from available **VM Library** (out-of-the-box) or **Custom** tests under [test-driven]{.smallcaps} in the left sidebar of the test selection modal.
+   - Use **{{<fa magnifying-glass >}} Search by name** on the top-left to locate specific test results.
 
-    ![Test-driven blocks that have been selected for insertion](test-driven-block-menu.png){width=85% fig-alt="A screenshot showing several test-driven blocks that have been selected for insertion" .screenshot}
+    ![Test-driven blocks that have been selected for insertion](test-driven-block-menu.png){fig-alt="A screenshot showing several test-driven blocks that have been selected for insertion" .screenshot}
 
    To preview what is included in a test, click on it. By default, the actively selected test is reviewed.
 
