--- a/site/guide/monitoring/work-with-metrics-over-time.qmd
+++ b/site/guide/monitoring/work-with-metrics-over-time.qmd
@@ -50,8 +50,8 @@ Learn how to log metrics over time, set thresholds, and analyze model performanc
 
 7. Select metric over time results:
 
-   - Select the metric over time to insert into the model documentation from the list of available metrics.
-   - Search by name using **{{<fa magnifying-glass >}} Search** on the top-left to locate specific metrics.
+   - Choose from available **VM Library** (out-of-the-box) or **Custom** tests under [metric over time]{.smallcaps} in the left sidebar of the test selection modal.
+   - Use **{{<fa magnifying-glass >}} Search by name** on the top-left to locate specific metric results.
 
     ![Metric Over Time blocks that have been selected for insertion](metrics-over-time-menu.png){fig-alt="A screenshot showing several Metric Over Time blocks that have been selected for insertion" .screenshot group="time-metric"}
 
@@ -62,7 +62,6 @@ Learn how to log metrics over time, set thresholds, and analyze model performanc
 9. After inserting the metrics into your document, review the data to confirm that it is accurate and relevant.
 
     ![Example F1 Score — Metric Over Time visualization](example-f1-score.png){fig-alt="A screenshot showing an example F1 Score — Metric Over Time visualization" .screenshot group="time-metric"}
-
 
 ## View metric over time metadata
 
